--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,6 +96,8 @@
 			</div>
 			<div class="col-md g-2">
 				<div class="instruction-output p-3 text-start">
+					<!-- alert alert-success is the green one -->
+					<div id="wrong-message" class="alert alert-danger" role="alert"></div>
 					<div class="d-sm-flex flex-row mb-2">
 						<h3 id="name_desc">huh</h3>
 					</div>
@@ -136,7 +138,7 @@
 	</div>
 </section>
 
-<footer class="p-3 bg-dark text-white text-center position-relative">
+<footer class="footer mt-auto p-3 bg-dark text-white text-center">
 	<div class="container">
 		<p class="lead">Created by Jose Matute - 2021</p>
 	</div>
