Instruction to Binary almost completed. Logic is working fine and all instruction conversions translate to binary & HEX. Error checking seemes to be working fine.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -99,29 +99,29 @@
 					<!-- alert alert-success is the green one -->
 					<div id="message" class="alert alert-danger" role="alert"></div>
 					<div class="d-sm-flex flex-row mb-2">
-						<h3 id="name_desc">huh</h3>
+						<h3 id="name_desc"></h3>
 					</div>
 					<div class="d-sm-flex flex-row mb-2">
 						<h3>Instruction:</h3>
-						<p id="p-instruction" class="fs-3 code-like">huh</p>
+						<p id="p-instruction" class="fs-3 code-like"></p>
 					</div>
 					<div class="d-sm-flex flex-row mb-2">
 						<h3>Binary:</h3>
-						<p id="p-binary" class="fs-4 fw-light text-break">00000000000000000000000000000000</p>
+						<p id="p-binary" class="fs-4 fw-light text-break"></p>
 					</div>
 					<div class="d-sm-flex flex-row mb-2">
 						<h3>Hex:</h3>
-						<p id="p-hex" class="fs-4 fw-light">huh</p>
+						<p id="p-hex" class="fs-4 fw-light"></p>
 					</div>
 				</div>
 				<hr />
 				<div id="r-type-table" class="row code-like mb-3">
 					<div class="col border">opcode(6): <span id="r-opcode"></span></div>
-					<div class="col border">rs(5):<span id="r-rs"></span></div>
-					<div class="col border">rt(5):<span id="r-rt"></span></div>
-					<div class="col border">rd(5):<span id="r-rd"></span></div>
-					<div class="col border">sa(5):<span id="r-sa"></span></div>
-					<div class="col border">function(6):<span id="r-function"></span></div>
+					<div class="col border">rs(5): <span id="r-rs"></span></div>
+					<div class="col border">rt(5): <span id="r-rt"></span></div>
+					<div class="col border">rd(5): <span id="r-rd"></span></div>
+					<div class="col border">sa(5): <span id="r-sa"></span></div>
+					<div class="col border">function(6): <span id="r-function"></span></div>
 				</div>
 				<div id="i-type-table" class="row code-like mb-3">
 					<div class="col border">opcode(6):<span id="i-opcode"></span></div>
