--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,7 +47,7 @@
 								Binary Value to MIPS Instruction & Hex
 							</button>
 						</h2>
-						<div id="binary-input" class="accordion-collapse collapse show" data-bs-parent="#converters">
+						<div id="binary-input" class="accordion-collapse collapse" data-bs-parent="#converters">
 							<div class="accordion-body">
 								<div class="input">
 									<label for="instruction" class="form-label fs-3">Enter Binary value:</label>
@@ -65,7 +65,7 @@
 								Hex Value to Binary & MIPS Instruction
 							</button>
 						</h2>
-						<div id="hex-input" class="accordion-collapse collapse" data-bs-parent="#converters">
+						<div id="hex-input" class="accordion-collapse collapse show" data-bs-parent="#converters">
 							<div class="accordion-body">
 								<div class="input">
 									<label for="instruction" class="form-label fs-3">Enter Hex value:</label>
