--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,7 +11,9 @@
 			integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="shortcut icon" type="image/jpg" href="img/chip.jpg" />
 		<title>MIPS Converter</title>
 	</head>
-	<body>
+	<body></body>
+</html>
