commented important code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -124,7 +124,7 @@
 					</div>
 				</div>
 				<hr />
-				<div id="r-type-table" class="row code-like m-1">
+				<div id="r-type-table" class="row code-like m-1 text-break">
 					<div class="col border">opcode(6): <span id="r-opcode"></span></div>
 					<div class="col border">rs(5): <span id="r-rs"></span></div>
 					<div class="col border">rt(5): <span id="r-rt"></span></div>
@@ -133,13 +133,13 @@
 					<div class="col border">function(6): <span id="r-function"></span></div>
 				</div>
 
-				<div id="i-type-table" class="row code-like m-1">
+				<div id="i-type-table" class="row code-like m-1 text-break">
 					<div class="col border">opcode(6):<span id="i-opcode"></span></div>
 					<div class="col border">rs(5):<span id="i-rs"></span></div>
 					<div class="col border">rt(5):<span id="i-rt"></span></div>
 					<div class="col border">immediate(16):<span id="i-imm"></span></div>
 				</div>
-				<div id="j-type-table" class="row code-like m-1">
+				<div id="j-type-table" class="row code-like m-1 text-break">
 					<div class="col border">opcode(6):<span id="j-opcode"></span></div>
 					<div class="col border">target(26):<span id="j-target"></span></div>
 				</div>
