Added Reference and Examples section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,7 +96,6 @@
 			</div>
 			<div class="col-md border p-2">
 				<div class="instruction-output p-3 text-start">
-					<!-- alert alert-success is the green one -->
 					<div id="message" class="alert alert-danger" role="alert"></div>
 					<h3>
 						Name:
@@ -142,6 +141,77 @@
 				<div id="j-type-table" class="row code-like m-1 text-break">
 					<div class="col border">opcode(6):<span id="j-opcode"></span></div>
 					<div class="col border">target(26):<span id="j-target"></span></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- Reference and Examples -->
+<section class="p-4 align-items-center justify-content-between text-center">
+	<div class="container">
+		<h2>Reference and Examples</h2>
+		<!-- all cards -->
+		<div class="row row-cols-1 row-cols-md-3 g-4">
+			<!-- card -->
+			<div class="col">
+				<div class="card">
+					<div class="card-body">
+						<div class="video-container">
+							<iframe
+								src="https://www.youtube.com/embed/ykI9nwSNFfM"
+								title="YouTube video player"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen
+							></iframe>
+						</div>
+
+						<h5 class="card-title">Intro to MIPS Instructions</h5>
+					</div>
+				</div>
+			</div>
+			<!-- card -->
+			<div class="col">
+				<div class="card">
+					<div class="card-body">
+						<div class="video-container">
+							<iframe
+								src="https://www.youtube.com/embed/2_bJ6Ei6zWo"
+								title="YouTube video player"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen
+							></iframe>
+						</div>
+
+						<h5 class="card-title">Encoding & Decoding MIPS Instructions</h5>
+					</div>
+				</div>
+			</div>
+
+			<div class="col">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">PDF References</h5>
+						<p class="card-text">
+							<a
+								href="https://eclass.teicrete.gr/modules/document/file.php/TP286/%CE%92%CE%BF%CE%B7%CE%B8%CE%B7%CF%84%CE%B9%CE%BA%CE%AC%20%CE%B5%CE%B3%CF%87%CE%B5%CE%B9%CF%81%CE%AF%CE%B4%CE%B9%CE%B1/MIPS_Instruction_Coding_With_Hex.pdf"
+								target="_blank"
+								rel="noopener noreferrer"
+								>MIPS Instruction Coding - Reference Sheet</a
+							>
+						</p>
+						<p class="card-text">
+							<a href="https://www.dsi.unive.it/~gasparetto/materials/MIPS_Instruction_Set.pdf" target="_blank" rel="noopener noreferrer"
+								>MIPS Instruction Set</a
+							>
+						</p>
+
+						<p class="card-text">
+							<a href="https://www.doc.ic.ac.uk/lab/secondyear/spim/node10.html" target="_blank" rel="noopener noreferrer">MIPS Registers</a>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
