Added meta tags and a better title. Added example for binary input.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
 	<div class="container">
 		<h2>Assembly Language Instructions to Binary & Hex</h2>
 		<p class="fs-5 fw-light text-start">
-			<a href="https://en.wikipedia.org/wiki/MIPS_architecture">MIPS </a>(Microprocessor without Interlocked Pipelined Stages) is a reduced instruction set
+			<a href="https://en.wikipedia.org/wiki/MIPS_architecture">MIPS</a>(Microprocessor without Interlocked Pipelined Stages) is a reduced instruction set
 			computer (RISC) instruction set architecture (ISA) developed by MIPS Computer Systems, now MIPS Technologies, based in the United States. When MIPS
 			instructions are classified according to coding format, they fall into four categories: R-type, I-type, J-type, and coprocessor. The coprocessor
 			instructions are not considered in this application.
@@ -18,7 +18,8 @@
 		<p class="fs-5 fw-light text-start">
 			The following application is a conversion tool to convert assembly instruction to binary and hexadecimal values, as well as the other way around.
 			Before entering anything, please double check your input and read the caveat underneath each input for any errors. If your input is correct, the second
-			table will output some information of the instruction, as well as the instruction itself and its binary and hexadecimal representations.
+			table will output some information of the instruction, as well as the instruction itself and its binary and hexadecimal representations. Check the
+			<a href="https://github.com/josematute/mips-converter" target="_blank" rel="noopener noreferrer">repository</a> for this application.
 		</p>
 
 		<div class="row text-center g-4">
@@ -65,6 +66,7 @@
 									<button type="button" class="btn btn-primary mt-2" id="binary-convert">Convert</button>
 									<div id="instructionHelp" class="form-text">
 										Binary value consists of only 0s and 1s, and its length must be of 32 bits (32 0s and 1s).<br />
+										Ex: 00000010000001000100100000100010
 									</div>
 								</div>
 							</div>
