--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,10 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="Description"
+			content="This website is a conversion tool to convert assembly instruction to binary and hexadecimal values, as well as the other way around. Before entering anything, please double check your input and read the caveat underneath each input for any errors. If your input is correct, the second table will output some information of the instruction, as well as the instruction itself and its binary and hexadecimal representations."
+		/>
 		<!-- Bootstrap CSS -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -13,7 +17,7 @@
 		/>
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="shortcut icon" type="image/jpg" href="img/chip.jpg" />
-		<title>MIPS Converter</title>
+		<title>MIPS Converter: Convert MIPS Instructions to Binary and Hexadecimal Values!</title>
 	</head>
 	<body></body>
 </html>
